--- a/index.html
+++ b/index.html
@@ -67,23 +67,22 @@
         background: #475569; 
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0",
     "react": "https://esm.sh/react@^19.2.3",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "mammoth": "https://esm.sh/mammoth@1.6.0",
-    "firebase/app": "https://esm.sh/firebase@10.8.0/app",
-    "firebase/database": "https://esm.sh/firebase@10.8.0/database",
-    "firebase/analytics": "https://esm.sh/firebase@10.8.0/analytics",
-    "firebase/": "https://esm.sh/firebase@10.8.0/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "mammoth": "https://esm.sh/mammoth@^1.11.0",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
